# dartsgpt

./: .dockerignore  .env.docker.example  .env.example  .gitignore  Dockerfile  README.md  __init__.py  __main__.py  app.py  cli.py  docker-compose.yml  docker-run.sh  main.py  orchestrator.py  pyproject.toml  setup.py  setup_env.sh  setup_with_uv.sh
agents/: __init__.py  base_agent.py  code_generator.py  executor.py  intent_classifier.py  parameter_extractor.py  template_selector.py  validator.py
config/: __init__.py  settings.py
demos/: __init__.py  demo_dartsgpt.py  demo_simple.py  run_cli.py  run_example.py
evaluation/: __init__.py  agent_evaluator.py  test_cases.py
examples/: README.md  browse_examples.py  example_catalog.md  example_prompts.json
examples/ccs/: README.md
examples/chemical/: README.md
examples/compositional/: README.md
examples/dead_oil/: README.md
examples/geothermal/: README.md
examples/poroelastic/: README.md
gas/: main.py  metadata.json  model.py
gas2/: metadata.json  model.py
knowledge/: __init__.py  example_prompts.py  model_analyzer.py  physics_features.py  rag_system.py
knowledge/darts-code/darts-flash-development/: .gitlab-ci.yml  CMakeLists.txt  README.md  pyproject.toml
knowledge/darts-code/darts-flash-development/cpp/: CMakeLists.txt
knowledge/darts-code/darts-flash-development/cpp/eos/: eos.cpp  ideal.cpp
knowledge/darts-code/darts-flash-development/cpp/flash/: flash.cpp  flash_params.cpp  flash_results.cpp  initial_guess.cpp  negativeflash.cpp  px_flash.cpp  trial_phase.cpp
knowledge/darts-code/darts-flash-development/cpp/global/: components.cpp
knowledge/darts-code/darts-flash-development/cpp/maths/: linesearch.cpp  root_finding.cpp
knowledge/darts-code/darts-flash-development/cpp/phase-split/: basesplit.cpp  multiphasesplit.cpp  twophasesplit.cpp
knowledge/darts-code/darts-flash-development/cpp/pybind/: py_eos.cpp  py_flash.cpp  py_global.cpp  py_main.cpp  py_stability.cpp
knowledge/darts-code/darts-flash-development/cpp/rr/: rr.cpp  rr_min.cpp
knowledge/darts-code/darts-flash-development/helper_scripts/: build.sh
knowledge/darts-code/darts-models-development/: .gitlab-ci.yml
knowledge/templates/: __init__.py  template_database.py
prompts/: __init__.py
tests/: __init__.py  run_all_tests.py
tests/integration/: __init__.py  test_comprehensive.py  test_edge_cases.py  test_full_agent.py  test_integration.py  test_knowledge_base.py
tests/unit/: __init__.py  test_cli.py  test_cli_basic.py  test_cli_simple.py  test_simple.py  test_system.py  test_unit_tests.py
tools/: __init__.py
utils/: __init__.py  executor.py
(+109 files in other folders)
