[project]
name = "dartsgpt"
version = "0.1.0"
description = "AI-powered DARTS model generation system using LangChain agents"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    { name = "DARTSGPT Team", email = "dartsgpt@example.com" }
]
dependencies = [
    "aiohttp>=3.12.12",
    "chromadb>=1.0.12",
    "click>=8.2.1",
    "fastapi>=0.115.9",
    "langchain>=0.3.25",
    "langchain-community>=0.3.25",
    "langchain-openai>=0.3.22",
    "nest-asyncio>=1.6.0",
    "numpy>=2.3.0",
    "openai>=1.86.0",
    "pandas>=2.3.0",
    "pydantic>=2.11.5",
    "pytest>=8.4.0",
    "pytest-asyncio>=1.0.0",
    "python-dotenv>=1.1.0",
    "rich>=14.0.0",
    "streamlit>=1.45.1",
    "tiktoken>=0.9.0",
    "uvicorn>=0.34.3",
]

[project.scripts]
dartsgpt = "dartsgpt.cli:cli"

[project.optional-dependencies]
dev = [
    "black>=24.1.0",
    "ruff>=0.2.0",
    "mypy>=1.8.0",
    "pre-commit>=3.6.0",
    "ipython>=8.20.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 88
target-version = ['py311']

[tool.ruff]
line-length = 88
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
