[project]
name = "dartsgpt"
version = "0.1.0"
description = "AI-powered DARTS model generation system using LangChain agents"
readme = "README.md"
requires-python = ">=3.9"
authors = [
    { name = "DARTSGPT Team", email = "dartsgpt@example.com" }
]
dependencies = [
    "aiohttp>=3.9.0",
    "chromadb>=0.4.0",
    "click>=8.0.0",
    "fastapi>=0.100.0",
    "langchain>=0.1.0",
    "langchain-community>=0.0.10",
    "langchain-openai>=0.0.5",
    "langgraph>=0.0.20",
    "nest-asyncio>=1.5.0",
    "numpy>=1.24.0",
    "openai>=1.0.0",
    "pandas>=2.0.0",
    "psutil>=5.9.0",
    "pydantic>=2.0.0",
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "python-dotenv>=1.0.0",
    "rich>=13.0.0",
    "streamlit>=1.28.0",
    "tiktoken>=0.5.0",
    "uvicorn>=0.23.0",
]

[project.scripts]
dartsgpt = "dartsgpt.cli:cli"

[project.optional-dependencies]
dev = [
    "black",
    "ruff",
    "mypy",
    "pre-commit",
    "ipython",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 88
target-version = ['py39']

[tool.ruff]
line-length = 88
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
